--- a/src/components/GridItem/GridItem.css
+++ b/src/components/GridItem/GridItem.css
@@ -70,10 +70,11 @@
   border-color: rgba(27, 27, 27, 0.9);
 }
 
-#links #like {
+#links #like,
+#links #copy {
   margin-right: 10px;
 }
 
-#icon {
-  margin-right: 8px;
+.icon {
+  margin-right: 5px;
 }
