--- a/src/components/GridItem/GridItem.css
+++ b/src/components/GridItem/GridItem.css
@@ -5,15 +5,15 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  /* -moz-box-shadow: 10px 10px 5px #222;
-  -webkit-box-shadow: 10px 10px 5px #222; */
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
   transition: 0.3s;
-  height: max-content;
+  height: auto;
+  display: inline-block;
 }
 
 .card .img-container img {
-  height: 100%;
+  /* height: 100%; */
+  height: auto;
   width: 100%;
   object-fit: cover;
 }
